.helm/tempalates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dienice-arch-homework-deployment
  namespace: lection-12
  labels:
    app: arch-app
    environment: test
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: arch-app
      environment: test
  template:
    metadata:
      labels:
        app: arch-app
        environment: test
    spec:
      containers:
      - name: dienice-hello-world 
        image: dienice/hello-world-docker:0.0.1
        ports:
        - name: http
          containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /api/v1/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
